Fixing some layout issues in DrawerMenu

--- a/src/ui/layout/DrawerMenu.less
+++ b/src/ui/layout/DrawerMenu.less
@@ -7,7 +7,7 @@
 		margin: @drawerMenuPadding @drawerMenuPadding 0 @drawerMenuPadding;
 	}
 
-	.tree {
+	> .tree {
 		margin: @drawerMenuPadding 0 0 0;
 	}
 
@@ -35,7 +35,7 @@
 		}
 	}
 
-	.toolbar {
+	> .toolbar {
 		border-top: @drawerMenuItemBorderHighlight;
 		padding: @drawerMenuFooterPadding;
 	}
